# fatapi-pg-skeleton

./: .env.example  .gitignore  README.md  alembic-readme.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20251218_170431_a96bf9d01f2b_create_users_table.py  20251218_171301_fcae40e34ba1_create_users_table.py
cli/: main.py
cli/commands/: db.py  server.py
src/app/: main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: health.py  users.py
src/app/common/: dependencies.py  exceptions.py  helpers.py  responses.py
src/app/core/: config.py  lifespan.py  logging_config.py  middleware.py  router.py
src/app/core/middleware/: __init__.py
src/app/models/: __init__.py
src/app/models/postgres/: __init__.py  base.py  database.py  user.py
src/app/providers/: __init__.py  base.py  email_provider.py
src/app/schemas/: base.py  user.py
src/app/services/: __init__.py  base.py  user_service.py
tests/: conftest.py
tests/api/v1/: test_health.py
